add level module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 
 project(crayfish LANGUAGES C)
 
-add_executable(crayfish src/main.c src/util.c)
+add_executable(crayfish src/main.c src/util.c src/level.c)
 
 target_include_directories(crayfish PUBLIC src)
 target_link_libraries(crayfish PUBLIC raylib m) # MATH
